# ChangeLog for dev-ruby/exception_notification
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*exception_notification-2.5.2 (29 Sep 2011)

  29 Sep 2011; Hans de Graaff <graaff@gentoo.org>
  +exception_notification-2.5.2.ebuild, +metadata.xml:
  Initial import.
