@@ -2,13 +2,11 @@
 Hash: SHA256
 
 DIST exception_notification-2.5.2.gem 90112 RMD160 a1b2e6dee275080886887a79d1a331751b18b596 SHA1 209db50519278f6958e8ca7f3d6a18e58309129b SHA256 8e7dc65831c79fea0423d72d262b9b37e20afac55d890605437192b60383c225
-EBUILD exception_notification-2.5.2.ebuild 558 RMD160 258022737333a533aef2663c32232792cc86a4b6 SHA1 f4ed1c4a4f256af7b0b445893d1e50c600e641c9 SHA256 36da6385b729e6fb61be3dbdf8d86033c5b362afb59448530e6a3eb82bc6bb31
-MISC ChangeLog 301 RMD160 010e2c3eb33b35657765a677d476952402cf83ae SHA1 d5982a8f7b4a211f1e0126ace78bfc2873d48a72 SHA256 a5fa05d781391e1671ac05fdac8526684b0c09cbfe0ce98d055524ff651dae8b
-MISC metadata.xml 201 RMD160 bbf7920d9809941fb024d20016dbe2fb9f15ff97 SHA1 e629d21795e99a77bd0a6aded1a153fd12d5b2c5 SHA256 c90b12c6600840878686d4544dbc51d97b0715add76b40d9400415cdef6324ad
+DIST exception_notification-2.6.1.gem 94208 RMD160 f4de4190d04c8d87c382e30769e060163aed078e SHA1 44046f3074aadfa4f83ec002396100d3cd96bb48 SHA256 8988218e15c0c8cf27b7756d893ffdb25155ad738c63d4b3b54a5f33bc3f667a
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAk6EiMAACgkQiIP6VqMIqNd5OQD+LN1QKUECrbrq1Y99lnTjXrJh
-To9MGABzAxSnAGIeOMQA/iIafi2US9Qzu/UDm605kdbyKF2wzRBk3ViJjXhSgEUv
-=XwiG
+iF4EAREIAAYFAk+Xl2MACgkQiIP6VqMIqNcONgD+JCiRPkYyc/JRGB8Sz0OeaTX/
+9v4rqwRd03QtI2163kAA+QFKlJR7RlZVSlvQ5ol6XXjRvwWDA0ZuhVRI+3OJJz9F
+=iYBP
 -----END PGP SIGNATURE-----
