@@ -1,6 +1,12 @@
 # ChangeLog for dev-ruby/exception_notification
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*exception_notification-2.6.1 (25 Apr 2012)
+
+  25 Apr 2012; Hans de Graaff <graaff@gentoo.org>
+  +exception_notification-2.6.1.ebuild:
+  Version bump. Add ruby19.
 
 *exception_notification-2.5.2 (29 Sep 2011)
 
